--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table border="5">
     <tr>
-      <td> <img src="C:\Users\asus\Desktop\Web Dev\Projects\xqcL.png" alt="xqcL"></td>
+      <td> <img src="xqcL.png" alt="xqcL"></td>
     </tr>
   </table>
 
