--- a/index.html
+++ b/index.html
@@ -1,88 +1,67 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title>Arihant Agnihotri's Personal Site</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="favicon.ico">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@1,100&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
+  </head>
+  <body>
+    <div class="top-container">
 
-<head>
-  <meta charset="utf-8">
-  <title> Arihant's Site </title>
-</head>
+      <img class="cloud" src="images/cloud.png" alt="bg">
 
-<body>
-  <table border="5">
-    <tr>
-      <td> <img src="xqcL.png" alt="xqcL"></td>
-    </tr>
-  </table>
+      <h1>I'm Arihant</h1>
+      <h2 class="pro">A programmer</h2>
 
-  <h1> <a href="https://www.twitch.tv/arihantagnihotri">Arihant Agnihotri</a> </h1>
-  <p><em>Gaming <strong>warlord</strong> and fellow <strong><a href="https://twitch.tv/xqcOW">juicer</a></strong>!</em></p>
-  <p>The man, The mth, The legend</p>
-  <hr size="5px" color = "gray">
-  <h3><em>Mastered Games :</em></h3>
-  <ol>
-    <li>Counter Strike : Global Offensive</li>
-    <li>Apex Legends</li>
-    <li>Valorant</li>
-    <li>Phasmophobia</li>
-    <li>Valheim</li>
-  </ol>
-  <hr>
-  <h3> <strong>INSANE GAMING ACHIEVEMENTS!</strong></h3>
-  <table border="1" cellspacing = "20" >
-    <thead>
-      <tr>
-        <th>Date</th>
-        <th>Achievement</th>
-      </tr>
-    </thead>
+      <img class="mountain" src="images/mountain.png" alt="bg">
+    </div>
 
-    <tbody>
-      <tr>
-        <td>2020</td>
-        <td>Valorant Champions league</td>
-      </tr>
-      <tr>
-        <td>CSGO</td>
-        <td>ESL MAJOR</td>
-      </tr>
-    </tbody>
-
-    <tfoot>
-
-    </tfoot>
-  </table>
-<hr>
-  <h3>Skills</h3>
-  <table border="1" cellspacing="10">
-    <thead>
-      <tr>
-        <th>Game</th>
-        <th>Rating</th>
-      </tr>
-    </thead>
-
-    <tbody>
-      <tr>
-        <td>Apex Legends ⭐⭐⭐⭐⭐</td>
+    <div class="middle-container">
+      <div class="profile">
+        <img class="profile-img" src="images/profile.webp" alt="profile-picture">
+        <h2>Hello.</h2>
+        <p class="intro">I am a Software Developer. I am a firm believer of the fact that any skill can be mastered if one puts the effort into it. </p>
+      </div>
+      <hr>
+      <div class="skills">
+        <h2>My Skills.</h2>
+        <div class="skill-row">
+          <img class="robot" src="images/robot.gif" alt="robot-gif">
+          <h3>Machine Learning</h3>
+          <p>One of my most cherished skill is being able to program machine learning models that are exceptional tools for predictions or pattern recognition</p>
+        </div>
+        <div class="skill-row">
+          <img class="programmer" src="images/programmer.gif" alt="programmer-gif">
+          <div class="cpp">
+            <h3><strong><em>Traditional </em></strong>programming languages (C++)</h3>
+            <p>I love creating software and C++ provides a sturdy and efficient base for doing so</p>
+          </div>
+        </div>
+      </div>
+      <hr>
+      <div class="contact-me">
+        <h2>Get In Touch</h2>
+        <h3>If you are interested in any of my projects/skills.</h3>
+        <p class="contact-message">Love programming as much as I do? Lets talk about it! Maybe we make the best team!</p>
+        <a class="btn" href="mailto:arihantagnihotri2106@gmail.com">CONTACT ME</a>
+      </div>
+    </div>
 
 
-        <td>CSGO ⭐⭐⭐⭐⭐</td>
-
-      </tr>
-
-      <tr>
-        <td>Valorant</td>
-        <td>⭐⭐⭐⭐</td>
-      </tr>
-    </tbody>
-
-    <tfoot>
-
-    </tfoot>
-  </table>
-<hr>
-  <h3><a href="contact.html"> Contact Details </a></h3>
+    <div class="bottom-container">
+      <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
+      <a class="footer-link" href="https://twitter.com/">Twitter</a>
+      <p class="copyright">© Arihant Agnihotri.</p>
+    </div>
 
 
-</body>
 
+  </body>
 </html>
