--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <div class="profile">
         <img class="profile-img" src="images/profile.webp" alt="profile-picture">
         <h2>Hello.</h2>
-        <p class="intro">I am a Software Developer. I am a firm believer of the fact that any skill can be mastered if one puts the effort into it. </p>
+        <p class="intro">I am a <strong>Software Developer</strong>. I am a firm believer of the fact that opportunities loom over the horizons of curiosity. </p>
       </div>
       <hr>
       <div class="skills">
@@ -35,13 +35,13 @@
         <div class="skill-row">
           <img class="robot" src="images/robot.gif" alt="robot-gif">
           <h3>Machine Learning</h3>
-          <p>One of my most cherished skill is being able to program machine learning models that are exceptional tools for predictions or pattern recognition</p>
+          <p>One of my most cherished Skills is being able to program machine learning models that are exceptional tools for predictions or pattern recognition</p>
         </div>
         <div class="skill-row">
           <img class="programmer" src="images/programmer.gif" alt="programmer-gif">
           <div class="cpp">
-            <h3><strong><em>Traditional </em></strong>programming languages (C++)</h3>
-            <p>I love creating software and C++ provides a sturdy and efficient base for doing so</p>
+            <h3><strong><em>Traditional </em></strong>programming languages</h3>
+            <p>I love creating software, and languages like C/C++, JAVA and Python provide a sturdy and efficient base for doing so</p>
           </div>
         </div>
       </div>
@@ -56,8 +56,8 @@
 
 
     <div class="bottom-container">
-      <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
-      <a class="footer-link" href="https://twitter.com/">Twitter</a>
+      <a class="footer-link" href="https://www.linkedin.com/in/arihant-agnihotri-444503200/">LinkedIn</a>
+      <a class="footer-link" href="https://twitter.com/ArihantAgnihot2">Twitter</a>
       <p class="copyright">© Arihant Agnihotri.</p>
     </div>
 
