--- a/index.html
+++ b/index.html
@@ -1,39 +1,86 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>Arihant Agnihotri's Personal Site</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="favicon.ico">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@1,100&display=swap" rel="stylesheet">
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
-  </head>
-  <body>
+
+<head>
+  <meta charset="utf-8">
+  <title>Arihant Agnihotri's Personal Site</title>
+
+  <!-- STYLESHEETS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <link rel="stylesheet" href="style.css">
+
+
+  <!-- ICON -->
+  <link rel="icon" href="icon.ico">
+
+
+  <!-- FONTS -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@1,100&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
+
+
+  <!-- SCRIPTS -->
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
+
+  <!-- FONT AWESOME JS -->
+  <script src="https://kit.fontawesome.com/7cec356310.js" crossorigin="anonymous"></script>
+
+</head>
+
+<body>
+  <section id="navigation-bar">
+    <nav class="navbar navbar-expand-lg navbar-dark">
+      <div class="container-fluid">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#introduction">Introduction</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">My Projects</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#contact">Contact Me</a>
+            </li>
+        </div>
+      </div>
+    </nav>
+
+  </section>
+
+  <section id="front-page">
     <div class="top-container">
 
-      <img class="cloud" src="images/cloud.png" alt="bg">
+            <img class="cloud" src="images/cloud.png" alt="bg">
 
-      <h1>I'm Arihant</h1>
-      <h2 class="pro">A programmer</h2>
+          <h1 class="name">I'm Arihant.</h1>
+          <h2 class="pro">A programmer</h2>
 
       <img class="mountain" src="images/mountain.png" alt="bg">
     </div>
+  </section>
+
+  <section id="introduction">
 
     <div class="middle-container">
       <div class="profile">
         <img class="profile-img" src="images/profile.webp" alt="profile-picture">
         <h2>Hello.</h2>
-        <p class="intro">I am a <strong>Software Developer</strong>. I am a firm believer of the fact that opportunities loom over the horizons of curiosity. </p>
+        <p class="intro">I am a <strong>Software Developer</strong> and a firm believer of the fact that <em>"opportunities loom over the horizons of curiosity."</em></p>
       </div>
       <hr>
       <div class="skills">
         <h2>My Skills.</h2>
         <div class="skill-row">
-          <img class="robot" src="images/robot.gif" alt="robot-gif">
+          <img class="machine-learning-img" src="images/robot.gif" alt="robot-gif">
           <h3>Machine Learning</h3>
           <p>One of my most cherished Skills is being able to program machine learning models that are exceptional tools for predictions or pattern recognition</p>
         </div>
@@ -46,22 +93,32 @@
         </div>
       </div>
       <hr>
-      <div class="contact-me">
-        <h2>Get In Touch</h2>
-        <h3>If you are interested in any of my projects/skills.</h3>
-        <p class="contact-message">Love programming as much as I do? Lets talk about it! Maybe we make the best team!</p>
-        <a class="btn" href="mailto:arihantagnihotri2106@gmail.com">CONTACT ME</a>
-      </div>
+
+  </section>
+
+  <section id="contact">
+
+
+    <div class="contact-me">
+      <h2 class="get-in-touch">Get In Touch</h2>
+      <h3 class="interested">If you are interested in any of my projects/skills.</h3>
+      <p class="contact-message">Love programming as much as I do? Lets talk about it! Maybe we'll be the best team!</p>
+      <a class="contact-me-btn btn btn-lg btn-outline-primary" href="mailto:arihantagnihotri2106@gmail.com">Contact Me</a>
     </div>
+    </div>
+  </section>
 
-
+  <section id="footer">
     <div class="bottom-container">
-      <a class="footer-link" href="https://www.linkedin.com/in/arihant-agnihotri-444503200/">LinkedIn</a>
-      <a class="footer-link" href="https://twitter.com/ArihantAgnihot2">Twitter</a>
+      <a class="socials" href="https://www.linkedin.com/in/arihant-agnihotri-444503200/"><i class="fab fa-linkedin"></i></a>
+      <a class="socials" href="https://twitter.com/ArihantAgnihot2"> <i class="social fab fa-twitter"></i></a>
       <p class="copyright">© Arihant Agnihotri.</p>
     </div>
 
 
+  </section>
 
-  </body>
+
+</body>
+
 </html>
