--- a/index.html
+++ b/index.html
@@ -112,6 +112,10 @@
     <div class="bottom-container">
       <a class="socials" href="https://www.linkedin.com/in/arihant-agnihotri-444503200/"><i class="fab fa-linkedin"></i></a>
       <a class="socials" href="https://twitter.com/ArihantAgnihot2"> <i class="social fab fa-twitter"></i></a>
+      <a class="socials" href="https://github.com/ArihantAgnihotri"> <i class="social fab fa-github"></i></a>
+      <div class="open-source">
+        <p>This website is <a href="https://github.com/ArihantAgnihotri/website"><strong> open source</strong></a>.</p>
+      </div>
       <p class="copyright">© Arihant Agnihotri.</p>
     </div>
 
